--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,11 @@ javafx {
 test {
     useJUnitPlatform()
 }
+sourceSets {
+    test {
+        java {
+            srcDir 'src/test'
+        }
+    }
+}
+
