--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre11'
+}
+
+dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
